Project {
  name: "Loan Management Database"
  note: "DBML schema generated from Golang structs"
}

Table User {
  id int [pk, increment]
  uuid varchar(36) [unique, not null]
  username varchar(255) [unique, not null]
  password varchar(255) [not null]
  email varchar(255) [not null]
  role varchar(255) [not null]
  fullname varchar(255) [not null]
  legalname varchar(255) [not null]
  nik varchar(255) [not null]
  birthplace varchar(255) [not null]
  birthdate varchar(255) [not null, note: "Format: DD-MM-YYYY"]
  current_salary float [not null]
  current_limit float [not null]
  ktp_photo varchar(255) [note: "Nullable"]
  face_photo varchar(255) [note: "Nullable"]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [note: "Soft delete, nullable"]

  Note: "Stores user information and related data."
}

Table RefreshToken {
  id int [pk, increment]
  uuid varchar(36) [unique, not null]
  user_id int [not null, ref: > User.id]
  user_uuid varchar(36) [not null]
  token varchar(36) [unique, not null]
  used_at timestamp [note: "Nullable"]
  expired_at timestamp [note: "Nullable"]
  invalid bool [default: false]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [note: "Soft delete, nullable"]

  Note: "Manages user refresh tokens for authentication."
}

Table Loan {
  id int [pk, increment]
  uuid varchar(36) [unique, not null]
  user_id int [not null, ref: > User.id]
  user_uuid varchar(36) [not null]
  asset_name varchar(255) [not null]
  ref_number bigint [not null]
  otr float [not null]
  interest_rate_percentage float [default: 10, not null]
  interest_rate float [not null]
  admin_fee_percentage float [default: 2, not null]
  admin_fee float [not null]
  installment_amount float [not null]
  total_amount float [not null]
  term_months int [not null]
  status varchar(255) [not null, default: "PENDING"]
  created_at timestamp [not null]
  updated_at timestamp [not null]
  deleted_at timestamp [note: "Soft delete, nullable"]

  Note: "Stores loan information and its details."
}

Ref: RefreshToken.user_id > User.id [delete: cascade]
Ref: Loan.user_id > User.id [delete: cascade]
